welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
for (i<-0 to 6)
{
	avance();
	if (estSurBiscuit)
	{
		for (c<-0 to 3)
		{
			recule();
		}
	return;
	}
	else
	{
		droite();
		avance();
		gauche();
	}
}
}
